WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132830
DataDetector UI doesn't update with resize
https://bugs.webkit.org/show_bug.cgi?id=132830
Summary
DataDetector UI doesn't update with resize
Brent Fulgham
Reported
2014-05-12 11:53:50 PDT
The DataDetector UI decorations on the page do not move with the elements they represent as the page is resized.
Attachments
Patch
(4.91 KB, patch)
2014-05-12 11:59 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
Patch
(5.96 KB, patch)
2014-05-12 16:49 PDT
,
Brent Fulgham
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2014-05-12 11:55:59 PDT
<
rdar://problem/16871179
>
Brent Fulgham
Comment 2
2014-05-12 11:59:40 PDT
Created
attachment 231311
[details]
Patch
Simon Fraser (smfr)
Comment 3
2014-05-12 12:01:18 PDT
Comment on
attachment 231311
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=231311&action=review
> Source/WebCore/page/FrameView.cpp:559 > +#if ENABLE(TELEPHONE_NUMBER_DETECTION) && !PLATFORM(IOS) > + if (m_frame) > + m_frame->editor().contentsResized(); > +#endif
You should wire this up to any layout, not just resizing.
Brent Fulgham
Comment 4
2014-05-12 16:49:49 PDT
Created
attachment 231340
[details]
Patch
Simon Fraser (smfr)
Comment 5
2014-05-12 16:52:01 PDT
Comment on
attachment 231340
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=231340&action=review
> Source/WebCore/page/FrameView.cpp:2753 > frame().selection().setCaretRectNeedsUpdate(); > frame().selection().updateAndRevealSelection(); > + frame().selection().updateDataDetectorsForSelection();
Maybe selection can have a layoutDidChange() function that does these three things?
Brent Fulgham
Comment 6
2014-05-12 17:30:00 PDT
Committed
r168664
: <
http://trac.webkit.org/changeset/168664
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug