DataDetectorUI doesn't update with resize https://bugs.webkit.org/show_bug.cgi?id=132830 <rdar://problem/16871179>

Reviewed by Simon Fraser.

* editing/Editor.cpp:
(WebCore::Editor::scanSelectionForTelephoneNumbers): Add public, no-argument
version that can be called after layout changes.
(WebCore::Editor::didLayout): Reprocess telephone number data
since Ranges will have changed.
* editing/Editor.h:
* editing/FrameSelection.cpp:
(WebCore::FrameSelection::updateDataDetectorsForSelection): Added.
* editing/FrameSelection.h:
* page/FrameView.cpp:
(WebCore::FrameView::performPostLayoutTasks): Ask the FrameSelection to update the
Range information for selected phone numbers.


Canonical link: https://commits.webkit.org/150898@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168664 268f45cc-cd09-0410-ab3c-d52691b4dbfc